navbar design done

--- a/src/components/SideNavBar/App.css
+++ b/src/components/SideNavBar/App.css
@@ -3,22 +3,28 @@
     width: 0%;
 }
 
+.nav{
+    height: 100vh;
+    width: 22vw;
+    background-color: white;
+}
+
 .SideNavBar{
     height: 100vh;
     width: 20vw;
-    background-color: white;
     display: flex;
     justify-content: start;
     align-items: center;
     flex-direction: column;
 }
 
+/* img of weather*/
 .img{
     height: 200px;
     width: 200px;
     position: relative;
     background-color: aliceblue;
-    margin-top: 20px;
+    margin-top: 2em;
 }
 
 img{
@@ -26,6 +32,7 @@ img{
     width: 200px;
 }
 
+/* parent div */
 .temp {
     height: 200px;
     width: 200px;
@@ -36,32 +43,52 @@ img{
     align-items: start;
 }
 
+/* wraapper for degree and % */
+.wrapper{
+    width: 100%;
+    height: auto;
+    display: flex;
+    background-color: white;
+    margin-top: 2em;
+    margin-left: 1em;
+}
+
+/* only degree */
 .degree{
     display: flex;
-    justify-content: space-around;
+    justify-content: start;
     align-items: start;
-    height: 50%;
-    width: inherit;
+    height: 100%;
+    width: 64px;
     background-color: white;
-    margin-top: 40px;
 }
+
 
 .time{
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: start;
     height: 50%;
     width: 100%;
     margin-top: 20px;
+    margin-left: 1em;
 }
+
+/* clock */
+.clock{
+    font-weight:normal;
+    color: rgb(172, 172, 171);
+}
+
+/* horizontal line */
 
 .line{
     height: 50px;
     width: 95%;
     border-top: 2px solid rgb(230, 230, 230);
     display: flex;
-    justify-content: center;
-    margin-top: 20px;
+    justify-content: start;
+    margin-top: 2.5em;
 }
 
 h2{
@@ -74,4 +101,45 @@ p{
     display: inline-block;
     height: auto;
     width: auto;
+}
+
+/* status */
+
+.status{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    display: flex;
+}
+
+.statusWrapper{
+    height: 100%;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    margin-left: 2.5em;
+    margin-top: 2em;
+}
+
+.weatherStatus{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    width: 100%;
+    height: 20%;
+    background-color: white;
+    font-size: 18px;
+    font-weight: 200;
+    margin-left: 0.5em;
+    margin-bottom: 1em;
+}
+
+.locationImg{
+    display: flex;
+    align-items: center;
+    height: 30%;
+    width: 100%;
 }
