--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
-body{
+*{
+  margin: 0;
+  padding: 0%;
+}
+.main {
   height: 100vh;
   width: 100vw;
-  background-color: antiquewhite;
+  display: flex;
+  align-items: start;
+  justify-content: start;
 }
