--- a/src/components/SideNavBar/App.css
+++ b/src/components/SideNavBar/App.css
@@ -3,6 +3,14 @@
   width: 0%;
 }
 
+.search {
+  height: 100px;
+  width: 100%;
+  background-color: aqua;
+  margin-top: 1em;
+  
+}
+
 .nav {
   height: 100vh;
   width: 22vw;
@@ -20,16 +28,16 @@
 
 /* img of weather*/
 .img {
-  height: 200px;
+  height:auto;
   width: auto;
   position: relative;
-  background-color: aliceblue;
-  margin-top: 2em;
+  margin-top: 6em;
 }
 
 img {
-  height: 200px;
-  width: 200px;
+  height: 50px;
+  width: 50px;
+  background-color: white;
 }
 
 /* parent div */
@@ -44,31 +52,31 @@ img {
 
 /* wraapper for degree and % */
 .wrapper {
-  width: auto;
-  height: auto;
-  display: flex;
-  margin-top: 2em;
-  margin-left: 1em;
+  width: 100%;
+  height: 1em;
+  display: grid;
+  justify-content: center;
+  grid-gap: 15px;
+  grid-template-columns: repeat(2, 80px);
+  margin-top: 1em;
 }
 
 /* only degree */
 .degree {
-  display: flex;
-  justify-content: start;
-  align-items: start;
   height: 100%;
-  width: 64px;
+  width: 100%;
 }
 
 .time {
   display: flex;
   justify-content: start;
   align-items: start;
-  height: 50%;
+  height: 100%;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 2em;
   margin-left: 1em;
 }
+
 
 /* clock */
 .clock {
@@ -84,7 +92,7 @@ img {
   border-top: 2px solid rgb(230, 230, 230);
   display: flex;
   justify-content: start;
-  margin-top: 2.5em;
+  /* margin-top: 2.5em; */
 }
 
 h2 {
