--- a/src/components/Home/wid.css
+++ b/src/components/Home/wid.css
@@ -17,7 +17,6 @@
     width: auto;
     display: grid;
     align-items: start;
-    /* justify-content: center; */
     margin-left: 1em;
     font-size: 18px;
     font-weight: bold;
@@ -30,7 +29,7 @@
 
 .speed{
     display: grid;
-    grid-template-columns: repeat(2, 40px);
+    grid-template-columns: repeat(2, 50px);
     align-items: center;
     margin-left: 1em;
     height: 50%;
@@ -46,4 +45,46 @@
     width: auto;
     margin-left: 1em;
     font-weight: bold;
+}
+
+img {
+    height: 25px;
+    width: 25px;
+}
+
+.sunrise {
+    height: 50%;
+    width: 100%;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(2, 2em);
+    margin-left: 1em;
+    font-weight: bold;
+}
+
+.sunset {
+    height: 50%;
+    width: 50%;
+    display: grid;
+    align-items: start;
+    grid-template-columns: repeat(2, 2em);
+    margin-left: 1em;
+    font-weight: bold;
+}
+
+.centerCor {
+    display: flex;
+    align-items: center;
+}
+
+.hum {
+    margin-left: 0.5em;
+    font-size: 42px;
+    margin-right: 5px;
+}
+
+.foot {
+    display: grid;
+    justify-content: start;
+    margin-left: 1.8em;
 }
