--- a/src/components/SideNavBar/App.css
+++ b/src/components/SideNavBar/App.css
@@ -6,13 +6,28 @@
 .search {
   height: 100px;
   width: 100%;
-  background-color: aqua;
-  margin-top: 1em;
-  
+  margin-top: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form{
+  height: 50px;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+input {
+  width: 100%;
+  height: 40%;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .nav {
-  height: 100vh;
+  height: 110%;
   width: 22vw;
   background-color: white;
 }
@@ -124,7 +139,6 @@ p {
   justify-content: start;
   align-items: start;
   margin-left: 2.5em;
-  margin-top: 2em;
 }
 
 .weatherStatus {
@@ -149,5 +163,3 @@ p {
 }
 
 /* responsive nav */
-
-
