--- a/src/components/about/App.css
+++ b/src/components/about/App.css
@@ -3,6 +3,14 @@
     padding: 0%;
 }
 
+.about{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
 .homeNav {
     height: 10%;
     width: 80%;
@@ -18,4 +26,25 @@
     align-items: center;
     justify-content: end;
     grid-gap: 20px;
+  }
+
+  .aboutSec {
+    height: inherit;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .list {
+    height: auto;
+    width: 50%;
+    display: flex;
+    justify-content: start;
+    margin-top: 2em;
+  }
+
+  li {
+    list-style: none;
+    margin-top: 0.5em;
   }
